test/negative/005_bad_int_suffix.fx
// expect: suffix
val a = 5i7
println(a)
